Fixed slideshow arrows not being visible

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -672,8 +672,7 @@ div[role="main"] {
                 left: 0;
 
                 &:before {
-                    content: "\f104";
-                      margin-right: 5px;
+                    margin-right: 5px;
                 }
             }
 
@@ -682,7 +681,6 @@ div[role="main"] {
                 right: 0;
 
                 &:after {
-                    content: "\f105";
                     margin-left: 5px;
                 }
             }
